# serve-md

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/serve_md/: __init__.py  cli.py  render.py  server.py
tests/: test_render.py  test_server.py
