[project]
name = "serve-md"
version = "0.1.0"
description = "Render a Markdown or HTML file as a live-reloading local web page."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andrew Leech", email = "andrew.leech@planetinnovation.com.au" }]
keywords = ["markdown", "preview", "live-reload", "http", "server"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown>=3.5",
    "pygments>=2.17",
]

[project.scripts]
serve-md = "serve_md.cli:main"

[project.urls]
Repository = "https://github.com/andrewleech/serve-md"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.15",
    "types-Markdown>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serve_md"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
